Fixes spacing

--- a/app/assets/stylesheets/crit.css.sass
+++ b/app/assets/stylesheets/crit.css.sass
@@ -78,8 +78,8 @@
 
   &.small
     border-radius: 30px
-    min-width: 30px
-    min-height: 30px
+    min-width: 40px
+    min-height: 40px
     .index
       top: -66px
       left: -40px
